--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,11 +19,12 @@ and open the template in the editor.
                 <a class="nav-item" href="/login">Login</a>
                 <a class="nav-item" href="/registro">Registro</a>
             </nav>
-<!--        </div>-->
+        </div>
         <!-- presentación-->
         <div class="container">
             <h3 class="text-center">¡Unite a nuestra comunidad de <span th:text="${count}"></span> traductores!</h3>
         </div>
+        <!-- script-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </body>
