--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>OpenCATweb - registro</title>
+        <title>OpenCATweb - login</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -16,13 +16,13 @@ and open the template in the editor.
         <div class="container">
             <nav class="navbar sticky-top navbar-dark bg-dark">
                 <h2 class="text-light">OpenCATweb</h2>
-                <a class="nav-item" href="/login">Login</a>
+                <a class="nav-item" href="/registro">Registro</a>
                 <a class="nav-item" href="/">Inicio</a>
             </nav>
         </div>
-        <!-- formulario de registro-->
+        <!-- formulario de login-->
         <div class="container mt-4">
-            <form method="POST" action="/registrartraductor">
+            <form method="POST" action="/logincheck">
                 <h2 class="text-center font-weight-bold">¡Registrate!</h2>
                 <p th:if="${message!=null}" th:text="${message}"></p>
                 <div class="form-group">
@@ -32,16 +32,6 @@ and open the template in the editor.
                 <div class="form-group">
                     <label>Contraseña: mínimo 6, máximo 20 caracteres</label>
                     <input class="form-control" type="password" name="password" requested minlength="6" maxlength="20">
-                </div>
-                <div class="form-group">
-                    <label>Email</label>
-                    <input class="form-control" type="email" name="email" requested>
-                </div>
-                <div class="form-group">
-                    <label>Idiomas de trabajo</label>
-                    <select class="form-control" multiple name="languages" requested>
-                        <option th:each="language :${languages}" th:value="${language}" th:text="${language}"></option>
-                    </select>
                 </div>
                 <div class="container">
                     <button type="submit" class="btn btn-success btn-lg">¡Listo!</button>
