--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,19 +7,11 @@ and open the template in the editor.
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>OpenCATweb - login</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <div th:replace="fragments :: head"></div>
     </head>
     <body>
         <!-- navigation bar -->
-        <div class="container">
-            <nav class="navbar sticky-top navbar-dark bg-dark">
-                <h2 class="text-light">OpenCATweb</h2>
-                <a class="nav-item" href="/registro">Registro</a>
-                <a class="nav-item" href="/">Inicio</a>
-            </nav>
-        </div>
+        <div th:replace="fragments :: nav_inicio"></div>
         <!-- formulario de login-->
         <div class="container mt-4">
             <form method="POST" action="/logincheck">
@@ -39,7 +31,6 @@ and open the template in the editor.
             </form>
         </div>
         <!-- script-->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    </body>
+        <div th:replace="fragments :: scripts"></div>
+        </body>
 </html>
