proyect init ready

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -31,4 +31,18 @@ and open the template in the editor.
             </nav>
     </th:block>
     
+    
+    <!--nav_principal-->
+    <th:block th:fragment="nav_principal">
+         <div class="container">
+            <nav class="navbar sticky-top navbar-dark bg-dark">
+                <h2 class="text-light">OpenCATweb</h2>
+                <a class="nav-item" href="/inicio">Inicio</a>
+                <a class="nav-item" href="/logout">Salir</a>
+                <a class="nav-item" href="/miperfil">Mi perfil</a>
+                <a class="nav-item" href="/misproyectos">Mis proyectos</a>
+            </nav>
+        </div>
+    </th:block>
+    
 </html>
