--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@ and open the template in the editor.
         <!-- formulario de login-->
         <div class="container mt-4">
             <form method="POST" action="/logincheck">
-                <h2 class="text-center font-weight-bold">¡Registrate!</h2>
+                <h2 class="text-center font-weight-bold">¡Logueate!</h2>
                 <p th:if="${message!=null}" th:text="${message}"></p>
                 <div class="form-group">
                     <label>Usuario: máximo 20 caracteres</label>
