--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -7,41 +7,39 @@ and open the template in the editor.
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>OpenCATweb - login</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <div th:replace="fragments :: head"></div>
     </head>
     <body>
         <!-- navigation bar -->
-        <div class="container">
-            <nav class="navbar sticky-top navbar-dark bg-dark">
-                <h2 class="text-light">OpenCATweb</h2>
-                <a class="nav-item" href="/logout">Salir</a>
-                <a class="nav-item" href="/miperfil">Mi perfil</a>
-                <a class="nav-item" href="/misproyectos">Mis proyectos</a>
-            </nav>
-        </div>
+        <div th:replace="fragments :: nav_principal"></div>
         <!-- filtrar proyectos-->
-        <!-- formulario de traducción-->
-        <!--<div class="container mt-4">
-            <form method="POST" action="/logincheck">
-                <h2 class="text-center font-weight-bold">¡Registrate!</h2>
-                <p th:if="${message!=null}" th:text="${message}"></p>
-                <div class="form-group">
-                    <label>Usuario: máximo 20 caracteres</label>
-                    <input class="form-control" type="text" name="username" requested maxlength="20">
-                </div>
-                <div class="form-group">
-                    <label>Contraseña: mínimo 6, máximo 20 caracteres</label>
-                    <input class="form-control" type="password" name="password" requested minlength="6" maxlength="20">
-                </div>
-                <div class="container">
-                    <button type="submit" class="btn btn-success btn-lg">¡Listo!</button>
-                </div>
-            </form>
-        </div> -->
+        <div>
+            <button th:each="proyecto: ${proyectos}">
+                <span th:text="${proyecto.nombre}" th:value="${proyecto.id}"></span>
+            </button>
+        </div>
+        <!-- mostrar segmentos para su elección-->
+        <div th:if="${segmentos!=null}">
+            <div th:each="${segmento: ${segmentos}}">
+                
+            </div>
+        </div>
+        <!-- cargar segmento -->
+        <div th:if="${segmentos == null}">
+            <div>
+                <form method="POST" action="/crearsegmento">
+                <h3>Crear segmento</h3>
+                <label>Proyecto</label>
+                <select th:each="proyecto : ${proyectos}" name="idProyecto">
+                    <option th:text="${proyecto.name}" th:value="${proyecto.id}"></option>
+                </select>
+                <label>Texto fuente</label>
+                <textarea type="text" rows="3" name="" maxlength="2000" required></textarea>
+                <button type="submit" class="btn btn-success">Crear</button>
+                </form>
+            </div>
+        </div>
         <!-- script-->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <div th:replace="fragments :: scripts"></div>
     </body>
 </html>
