--- a/src/main/resources/templates/misproyectos.html
+++ b/src/main/resources/templates/misproyectos.html
@@ -7,54 +7,53 @@ and open the template in the editor.
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
     <head>
        <title>OpenCATweb - mis proyectos</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+       <div th:replace="fragments :: head"></div>
     </head>
     <body>
        <!-- navigation bar -->
-        <div class="container">
-            <nav class="navbar sticky-top navbar-dark bg-dark">
-                <h2 class="text-light">OpenCATweb</h2>
-                <a class="nav-item" href="/logout">Salir</a>
-                <a class="nav-item" href="/miperfil">Mi perfil</a>
-                <a class="nav-item" href="/inicio">Inicio</a>
-            </nav>
-        </div>
-        <!-- crear proyecto-->
-        <div class="container mt-4">
+       <div th:replace="fragments :: nav_principal"></div>
+       <!-- crear proyecto-->
+       <div class="container mt-4">
             <form method="POST" action="/crearproyecto">
                 <h2 class="text-center font-weight-bold">Crea tu proyecto</h2>
                 <p th:if="${message!=null}" th:text="${message}"></p>
-                <input type="hidden" th:value="${usuariosession.id}" name="idUsuario">
+                <input type="hidden" th:value="${session.usuariosession.id}" name="idUsuario">
                 <div class="form-group">
                     <label>Nombre del proyecto (Máximo 25 caracteres)</label>
                     <input class="form-control" type="text" name="nombre" requested maxlength="25">
                 </div>
                 <div class="form-group">
                     <label>Lengua fuente</label>
-                    <select th:each="${language: languages}" name="source">
-                        <option th:text=${language}" th:value="${language}"></option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label>Lengua fuente</label>
-                    <select th:each="${language: languages}" name="source">
-                        <option th:text=${language}" th:value="${language}"></option>
-                    </select>
+                    <input type="text" list="sList"  name="source">
+                    <datalist id="sList">
+                        <option th:each="language: ${languages}" th:text="${language.toString}"></option>
+                    </datalist>
+                    
                 </div>
                 <div class="form-group">
                     <label>Lengua meta</label>
-                    <select th:each="${language: languages}" name="target">
-                        <option th:text=${language}" th:value="${language}"></option>
-                    </select>
+                    <input type="text" list="tList" name="target">
+                    <datalist id="tList">
+                        <option th:each="language: ${languages}" th:text="${language.toString}"></option>
+                    </datalist>
                 </div>
                 <div class="container">
                     <button type="submit" class="btn btn-success btn-lg">¡Listo!</button>
                 </div>
             </form>
-        
+        </div>
         <!-- cargar archivo-->
+       <!-- <div class="container mt-4">
+            <form method="POST" action="/cargararchivo" enctype="multipart/form-data">
+                <label>Elegir proyecto</label>
+                <select th:each="proyecto : ${proyectos}" name="idProyecto">
+                    <option th:text="${proyecto.name}" th:value="${proyecto.id}"></option>
+                </select>
+                <label>Elegir archivo</label>
+                <input type="file" name="archivo" accept="text/plain" class="form-control-file">
+                <button type="submit" class="btn btn-success">Subir archivo</button>
+            </form>
+        </div> -->
         <!-- agregar colaboradores-->
         <!-- quitar colaboradores-->
         <!-- modificar proyecto-->
